--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
-  <body>
+  <body style="background-color:powderblue;">
     <script src="sketch.js"></script>
   
 
